фdd lab 7 implementation